# QmlCoolStuff

./: .gitignore  CMakeLists.txt  README.md
design/: cool_design.sketch
exampleapp/: CMakeLists.txt  main.cpp  main.qml
src/: CMakeLists.txt  qml_cool_stuff.qrc
src/Cool/Components/: CutCornerBox.qml  DragMoveArea.qml  WindowCloseButton.qml  qmldir
src/Cool/Controls/: CoolAbstractButton.qml  CoolButton.qml  CoolTextButton.qml  CoolWindow.qml  qmldir
src/Cool/Styles/: CoolStyle.qml  qmldir
src/qcs/: basiccutcornerbox.cpp  basiccutcornerbox.h  basicwindowclosebutton.cpp  basicwindowclosebutton.h  cool_global.h  cool_register_classes.h
